get rid of some deprecated methods